# pyminispeaker

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pydoc-markdown.yml  pylock.toml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  pypi.yml
docs/: build.md  index.md  package-lock.json  package.json  pydoc-markdown.yml
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.mts
docs/building/: source.md
docs/contributions/: docops.md
docs/dev/: ai-code-policy.md
docs/examples/assistants/: realtime.md
docs/examples/text-to-speech/: chat-completions.md  eleven-labs.md
docs/getting-started/: 00-start.md
src/minispeaker/: __init__.py  asyncsync.py  devices.py  player.py  speakers.py  tracks.py
src/minispeaker/processor/: convert.py  mixer.py  pipes.py
src/minispeaker/utils/: asyncsync.py  miniaudios.py
src/pyminispeaker/: speakers.py
