[project]
name = "pyminispeaker"
version = "0.1.0"
description = "Python speaker abstraction library via [`pyminiaudio`](https://github.com/irmen/pyminiaudio) backend"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "miniaudio>=1.61",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
keywords = ["sound", "audio", "playback", "async"]

[project.scripts]
pyminispeaker = "pyminispeaker:main"


[project.urls]
Homepage = "https://github.com/agape-1/pyminispeaker/"
Repository = "https://github.com/agape-1/pyminispeaker/"

[build-system]
requires = ["uv_build>=0.7.9,<0.8"]
build-backend = "uv_build"
